| Summary: | ASTERISK-24716: Improve pjsip log messages for presence subscription failure | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2015-01-23 16:07:58.000-0600 | Date Closed: | 2015-02-14 12:31:39.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_exten_state |
| Versions: | 13.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) debug_trace.txt | |
| Description: | When an endpoint attempts to subscribe for presence and fails (due to no presence state provider I believe) we see the following message:
{noformat} [Jan 23 15:46:57] WARNING[5887]: res_pjsip_exten_state.c:337 new_subscribe: Extension 000FD3012445 does not exist or has no associated hint {noformat} {noformat} debian1*CLI> core show hints -= Registered Asterisk Dial Plan Hints =- 1001@hints : PJSIP/0019159BF771 State:Idle Presence:not_set Watchers 0 1002@hints : PJSIP/000FD3012445 State:Idle Presence:not_set Watchers 0 1003@hints : PJSIP/00094558B29E State:Idle Presence:not_set Watchers 0 ---------------- - 3 hints registered {noformat} Without turning up DEBUG, the message is a little ambiguous without relying on knowledge of the mentioned modules or functions. {quote} Extension 000FD3012445 does not exist or has no associated hint {quote} Maybe the message could say something along these lines: "Presence subscription failed: No extension or hint with the name of 000FD3012445 was found." | ||
| Comments: | |||